--- a/src/main/webapp/WebContent/css/style.css
+++ b/src/main/webapp/WebContent/css/style.css
@@ -36,7 +36,7 @@
 	font-size: 1.2em;
 	width: 100%;
 	padding: 8px;
-	
+
 }
 
 h1 {
@@ -45,3 +45,6 @@ h1 {
 	margin: 10px auto;
 }
 
+.error{
+	color:red;
+}
